Cambio de color en las plantillas

--- a/app/src/main/res/layout/activity_area_perimetro_pentagono.xml
+++ b/app/src/main/res/layout/activity_area_perimetro_pentagono.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0B0A0A"
+    android:background="#FBFBFB"
     tools:context=".Area_Perimetro_Pentagono">
 
     <TextView
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Ingrese el apotema"
-        android:textColor="#FBF9F9"
+        android:textColor="#000000"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,7 +27,7 @@
         android:layout_height="28dp"
         android:text="x"
         android:textAlignment="center"
-        android:textColor="#FBFAFA"
+        android:textColor="#171414"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -43,7 +43,7 @@
         android:layout_height="46dp"
         android:ems="10"
         android:inputType="text"
-        android:textColor="#FAF7F7"
+        android:textColor="#171414"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.264"
@@ -57,7 +57,7 @@
         android:layout_height="45dp"
         android:ems="10"
         android:inputType="text"
-        android:textColor="#F3ECEC"
+        android:textColor="#131313"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.381"
@@ -71,7 +71,7 @@
         android:layout_height="34dp"
         android:text="5"
         android:textAlignment="center"
-        android:textColor="#FBFAFA"
+        android:textColor="#191818"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -87,7 +87,7 @@
         android:layout_height="34dp"
         android:text="/2"
         android:textAlignment="center"
-        android:textColor="#FBFAFA"
+        android:textColor="#171414"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -102,7 +102,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="A="
-        android:textColor="#FFFEFE"
+        android:textColor="#000000"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -116,7 +116,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="A="
-        android:textColor="#FFFEFE"
+        android:textColor="#000000"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -136,9 +136,10 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.031" />
+        app:layout_constraintVertical_bias="0.069" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -146,10 +147,9 @@
         android:layout_height="218dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.108"
+        app:layout_constraintVertical_bias="0.151"
         app:srcCompat="@drawable/pentagono" />
 
     <TextView
@@ -173,7 +173,7 @@
         android:layout_width="30dp"
         android:layout_height="33dp"
         android:text="P="
-        android:textColor="#FFFDFD"
+        android:textColor="#201F1F"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -187,7 +187,7 @@
         android:layout_width="30dp"
         android:layout_height="33dp"
         android:text="P="
-        android:textColor="#FFFDFD"
+        android:textColor="#201F1F"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -203,7 +203,7 @@
         android:layout_height="46dp"
         android:ems="10"
         android:inputType="text"
-        android:textColor="#F8F5F5"
+        android:textColor="#131313"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.257"
@@ -217,7 +217,7 @@
         android:layout_height="46dp"
         android:ems="10"
         android:inputType="text"
-        android:textColor="#F8F5F5"
+        android:textColor="#131313"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.257"
@@ -230,7 +230,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Ingrese el perimetro"
-        android:textColor="#FBF9F9"
+        android:textColor="#1F2020"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -260,7 +260,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="A="
-        android:textColor="#FFFEFE"
+        android:textColor="#000000"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -275,7 +275,7 @@
         android:layout_height="46dp"
         android:ems="10"
         android:inputType="text"
-        android:textColor="#F6F1F1"
+        android:textColor="#171414"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.703"
@@ -289,7 +289,7 @@
         android:layout_height="43dp"
         android:ems="10"
         android:inputType="text"
-        android:textColor="#F6F4F4"
+        android:textColor="#171414"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.24"
@@ -303,7 +303,7 @@
         android:layout_height="28dp"
         android:text="x"
         android:textAlignment="center"
-        android:textColor="#FBFAFA"
+        android:textColor="#191818"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -315,19 +315,19 @@
 
     <Button
         android:id="@+id/btnArea"
-        android:layout_width="81dp"
-        android:layout_height="56dp"
+        android:layout_width="120dp"
+        android:layout_height="54dp"
         android:onClick="calculararea"
         android:text="AREA"
-        android:textColor="#F80303"
+        android:textColor="#F8F8F8"
         android:textStyle="bold"
-        app:backgroundTint="#E9DFDF"
+        app:backgroundTint="#E91E63"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.86"
+        app:layout_constraintHorizontal_bias="0.883"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.901" />
+        app:layout_constraintVertical_bias="0.903" />
 
     <Button
         android:id="@+id/btnPerimetro"
@@ -335,9 +335,9 @@
         android:layout_height="wrap_content"
         android:onClick="calcularperimetro"
         android:text="PERIMETRO"
-        android:textColor="#F80303"
+        android:textColor="#FDF8F8"
         android:textStyle="bold"
-        app:backgroundTint="#E9DFDF"
+        app:backgroundTint="#E91E63"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.906"
@@ -347,14 +347,15 @@
 
     <Button
         android:id="@+id/btnAtras"
-        android:layout_width="87dp"
-        android:layout_height="39dp"
+        android:layout_width="118dp"
+        android:layout_height="49dp"
+        android:backgroundTint="#E91E63"
         android:text="ATRAS"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.006"
+        app:layout_constraintHorizontal_bias="0.01"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.013" />
 </androidx.constraintlayout.widget.ConstraintLayout>
