--- a/app/src/main/res/layout/activity_basicas.xml
+++ b/app/src/main/res/layout/activity_basicas.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".BasicasActivity">
 
     <Button
@@ -12,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="304dp"
         android:layout_marginTop="376dp"
+        android:backgroundTint="#E91E63"
         android:text="/"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -24,6 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="104dp"
         android:layout_marginTop="376dp"
+        android:backgroundTint="#E91E63"
         android:text="-"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -36,6 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="204dp"
         android:layout_marginTop="376dp"
+        android:backgroundTint="#E91E63"
         android:text="*"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -48,6 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="376dp"
+        android:backgroundTint="#E91E63"
         android:text="+"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -63,17 +68,18 @@
         android:ems="10"
         android:inputType="text"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="@string/txtNum3" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/lblTitulo"
-        android:layout_width="268dp"
-        android:layout_height="60dp"
+        android:layout_width="292dp"
+        android:layout_height="49dp"
         android:layout_marginStart="68dp"
         android:layout_marginTop="16dp"
+        android:background="#FFFFFF"
         android:text="OPERACIONES BÁSICAS"
         android:textAlignment="center"
+        android:textColor="#E91E63"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -88,8 +94,7 @@
         android:ems="10"
         android:inputType="text"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="@string/txtNum1" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/txtNum2"
@@ -100,7 +105,6 @@
         android:ems="10"
         android:inputType="text"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="@string/txtNum2" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
