--- a/app/src/main/res/layout/activity_formula_general.xml
+++ b/app/src/main/res/layout/activity_formula_general.xml
@@ -5,6 +5,7 @@
     android:id="@+id/btnregresar"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="#E91E63"
     tools:context=".FormulaGeneral"
     tools:layout_editor_absoluteX="2dp"
     tools:layout_editor_absoluteY="57dp">
@@ -13,8 +14,8 @@
         android:id="@+id/txtnega"
         android:layout_width="180dp"
         android:layout_height="35dp"
-        android:layout_marginStart="216dp"
-        android:layout_marginTop="660dp"
+        android:layout_marginStart="224dp"
+        android:layout_marginTop="596dp"
         android:background="#F3F2F4"
         android:textColor="@color/black"
         android:textSize="16sp"
@@ -28,7 +29,7 @@
         android:layout_width="180dp"
         android:layout_height="33dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="660dp"
+        android:layout_marginTop="596dp"
         android:background="@color/material_dynamic_neutral95"
         android:textColor="@color/black"
         android:textSize="16sp"
@@ -42,7 +43,7 @@
         android:layout_width="178dp"
         android:layout_height="35dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="616dp"
+        android:layout_marginTop="524dp"
         android:background="#673AB7"
         android:text="RESULTADO POSITIVO :"
         android:textColor="#FFFFFF"
@@ -55,8 +56,8 @@
         android:id="@+id/textView11"
         android:layout_width="178dp"
         android:layout_height="35dp"
-        android:layout_marginStart="216dp"
-        android:layout_marginTop="616dp"
+        android:layout_marginStart="228dp"
+        android:layout_marginTop="524dp"
         android:background="#673AB7"
         android:text="RESULTADO NEGATIVO :"
         android:textColor="#FFFFFF"
@@ -112,7 +113,7 @@
         android:layout_marginEnd="100dp"
         android:text="FRORMULA GENERAL"
         android:textAlignment="center"
-        android:textColor="@color/black"
+        android:textColor="#E91E63"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -161,8 +162,9 @@
         android:id="@+id/button"
         android:layout_width="179dp"
         android:layout_height="60dp"
-        android:layout_marginStart="116dp"
-        android:layout_marginBottom="232dp"
+        android:layout_marginStart="92dp"
+        android:layout_marginBottom="40dp"
+        android:backgroundTint="#E91E63"
         android:onClick="calculaFormula"
         android:text="CALCULAR"
         android:textSize="20sp"
@@ -175,8 +177,9 @@
         android:id="@+id/btnregresa"
         android:layout_width="127dp"
         android:layout_height="53dp"
-        android:layout_marginStart="140dp"
-        android:layout_marginBottom="164dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginBottom="136dp"
+        android:backgroundTint="#E91E63"
         android:text="REGRESAR"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
