--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="#E91E63"
     tools:context=".MainActivity">
 
     <TextView
@@ -33,12 +34,12 @@
         android:id="@+id/lblTitulo2"
         android:layout_width="244dp"
         android:layout_height="69dp"
-        android:layout_marginTop="84dp"
-        android:layout_marginEnd="72dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="84dp"
         android:text="TEOREMA DE PITAGORAS"
         android:textAlignment="center"
-        android:textColor="#121212"
-        android:textSize="16sp"
+        android:textColor="#E91E63"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -118,8 +119,9 @@
         android:id="@+id/btnCalcula"
         android:layout_width="135dp"
         android:layout_height="70dp"
-        android:layout_marginEnd="128dp"
-        android:layout_marginBottom="108dp"
+        android:layout_marginEnd="136dp"
+        android:layout_marginBottom="160dp"
+        android:backgroundTint="#E91E63"
         android:onClick="calcula"
         android:text="CALCULAR"
         app:backgroundTint="#571818"
@@ -130,6 +132,9 @@
         android:id="@+id/btnRegresar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="708dp"
+        android:backgroundTint="#E91E63"
         android:onClick="regresar"
         android:text="REGRESAR"
         app:backgroundTint="#972828"
