--- a/app/src/main/res/layout/activity_menu_operaciones.xml
+++ b/app/src/main/res/layout/activity_menu_operaciones.xml
@@ -49,39 +49,45 @@
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="0dp"
-        android:layout_height="94dp"
+        android:layout_width="162dp"
+        android:layout_height="81dp"
         android:layout_marginStart="4dp"
         android:layout_marginTop="124dp"
+        android:backgroundTint="#E91E63"
+        android:foregroundTint="#E91E63"
         android:text="NUMEROS PERFECTOS"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.613"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toEndOf="@+id/btnTrinomio"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn_fibonacci"
-        android:layout_width="0dp"
-        android:layout_height="71dp"
+        android:layout_width="284dp"
+        android:layout_height="92dp"
         android:layout_marginStart="4dp"
         android:layout_marginTop="672dp"
+        android:backgroundTint="#E91E63"
+        android:foregroundTint="#E91E63"
         android:onClick="fibonacci"
         android:text="FIBONACCI"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.585"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btnformulageneral"
-        android:layout_width="0dp"
-        android:layout_height="85dp"
+        android:layout_width="173dp"
+        android:layout_height="81dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="232dp"
+        android:layout_marginTop="212dp"
+        android:backgroundTint="#E91E63"
+        android:foregroundTint="#E91E63"
         android:text="FORMULA GENERAL"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_weight="1"
@@ -90,23 +96,27 @@
 
     <Button
         android:id="@+id/btnIrTrapecio"
-        android:layout_width="208dp"
-        android:layout_height="57dp"
+        android:layout_width="173dp"
+        android:layout_height="72dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="416dp"
+        android:layout_marginTop="384dp"
+        android:backgroundTint="#E91E63"
+        android:foregroundTint="#E91E63"
         android:text="Trapecio"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.711"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toEndOf="@+id/button7"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnOperacionesBasicas"
-        android:layout_width="188dp"
-        android:layout_height="81dp"
+        android:layout_width="160dp"
+        android:layout_height="74dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="236dp"
+        android:layout_marginTop="220dp"
+        android:backgroundTint="#E91E63"
+        android:foregroundTint="#E91E63"
         android:text="OPERACIONES BASICAS"
         app:layout_constraintEnd_toStartOf="@+id/btnformulageneral"
         app:layout_constraintHorizontal_weight="1"
@@ -115,10 +125,12 @@
 
     <Button
         android:id="@+id/btnPitagoras"
-        android:layout_width="196dp"
-        android:layout_height="77dp"
-        android:layout_marginStart="12dp"
+        android:layout_width="169dp"
+        android:layout_height="75dp"
+        android:layout_marginStart="28dp"
         android:layout_marginTop="552dp"
+        android:backgroundTint="#E91E63"
+        android:foregroundTint="#E91E63"
         android:onClick="pitagoras"
         android:text="Pitagoras"
         app:layout_constraintHorizontal_weight="1"
@@ -127,20 +139,24 @@
 
     <Button
         android:id="@+id/button7"
-        android:layout_width="179dp"
-        android:layout_height="56dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="416dp"
+        android:layout_width="169dp"
+        android:layout_height="69dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="384dp"
+        android:backgroundTint="#E91E63"
+        android:foregroundTint="#E91E63"
         android:text="Area Triangulo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnNPrimos"
-        android:layout_width="198dp"
-        android:layout_height="74dp"
+        android:layout_width="161dp"
+        android:layout_height="78dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="496dp"
+        android:layout_marginTop="464dp"
+        android:backgroundTint="#E91E63"
+        android:foregroundTint="#E91E63"
         android:text="NUMEROS PRIMOS"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.989"
@@ -150,10 +166,12 @@
 
     <Button
         android:id="@+id/btn_said"
-        android:layout_width="191dp"
-        android:layout_height="80dp"
-        android:layout_marginTop="552dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="166dp"
+        android:layout_height="76dp"
+        android:layout_marginTop="548dp"
+        android:layout_marginEnd="20dp"
+        android:backgroundTint="#E91E63"
+        android:foregroundTint="#E91E63"
         android:text="NUMEROS PRIMOS"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_weight="1"
@@ -161,10 +179,12 @@
 
     <Button
         android:id="@+id/btnPentagono"
-        android:layout_width="0dp"
-        android:layout_height="78dp"
+        android:layout_width="167dp"
+        android:layout_height="81dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="476dp"
+        android:layout_marginTop="464dp"
+        android:backgroundTint="#E91E63"
+        android:foregroundTint="#E91E63"
         android:text="PENTAGONO"
         app:layout_constraintEnd_toStartOf="@+id/btnNPrimos"
         app:layout_constraintHorizontal_weight="1"
@@ -173,20 +193,24 @@
 
     <Button
         android:id="@+id/btnTrinomio"
-        android:layout_width="0dp"
-        android:layout_height="94dp"
-        android:layout_marginStart="4dp"
+        android:layout_width="159dp"
+        android:layout_height="83dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="124dp"
+        android:backgroundTint="#E91E63"
+        android:foregroundTint="#E91E63"
         android:text="Trinomio-Monomio"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnJefersonY"
-        android:layout_width="0dp"
-        android:layout_height="89dp"
+        android:layout_width="176dp"
+        android:layout_height="84dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="320dp"
+        android:layout_marginTop="300dp"
+        android:backgroundTint="#E91E63"
+        android:foregroundTint="#E91E63"
         android:text="Operacion Factorial"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_weight="1"
@@ -195,10 +219,12 @@
 
     <Button
         android:id="@+id/btn_aldaz"
-        android:layout_width="0dp"
-        android:layout_height="86dp"
+        android:layout_width="164dp"
+        android:layout_height="80dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="320dp"
+        android:layout_marginTop="300dp"
+        android:backgroundTint="#E91E63"
+        android:foregroundTint="#E91E63"
         android:text="Exponenciales"
         app:layout_constraintEnd_toStartOf="@+id/btnJefersonY"
         app:layout_constraintHorizontal_weight="1"
