--- a/app/src/main/res/layout/activity_numeros_perfectos.xml
+++ b/app/src/main/res/layout/activity_numeros_perfectos.xml
@@ -13,7 +13,10 @@
         android:id="@+id/backgroundImageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:backgroundTint="#FFFFFF"
+        android:foregroundTint="#FFFFFF"
         android:scaleType="centerCrop"
+        android:soundEffectsEnabled="false"
         android:src="@drawable/lineas"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -116,10 +119,10 @@
 
     <Button
         android:id="@+id/btnDividir"
-        android:layout_width="92dp"
-        android:layout_height="95dp"
+        android:layout_width="133dp"
+        android:layout_height="65dp"
         android:text="OK"
-        android:textSize="34sp"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.846"
