--- a/app/src/main/res/layout/activity_numeros_primos.xml
+++ b/app/src/main/res/layout/activity_numeros_primos.xml
@@ -4,17 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/regularshow"
+    android:backgroundTint="#E91E63"
     tools:context=".NumerosPrimos">
 
     <TextView
         android:id="@+id/lbltitle"
         android:layout_width="327dp"
         android:layout_height="100dp"
+        android:background="#FFFFFF"
         android:fontFamily="sans-serif-black"
         android:text="COMPROBACION DE                                             NUMEROS PRIMOS"
         android:textAlignment="center"
-        android:textColor="#FB0707"
+        android:textColor="#E91E63"
         android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,6 +27,7 @@
         android:id="@+id/lbling"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="#FFFFFF"
         android:fontFamily="sans-serif-black"
         android:text="INGRESE UN NUMERO"
         android:textColor="#7B1FA2"
@@ -41,6 +43,7 @@
         android:id="@+id/lbling2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="#FFFFFF"
         android:fontFamily="sans-serif-black"
         android:text="SU NUMERO ES:"
         android:textColor="#7B1FA2"
@@ -82,6 +85,7 @@
         android:id="@+id/btnveryfi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="#E91E63"
         android:text="VERIFICAR"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -94,6 +98,7 @@
         android:id="@+id/btnvolver"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="#E91E63"
         android:text="VOLVER"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
