--- a/app/src/main/res/layout/activity_trapecio.xml
+++ b/app/src/main/res/layout/activity_trapecio.xml
@@ -14,7 +14,9 @@
         android:layout_height="58dp"
         android:text="Area y perímetro de un trapecio "
         android:textAlignment="center"
+        android:textColor="#E91E63"
         android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -26,6 +28,7 @@
         android:id="@+id/btnAreaTrapecio"
         android:layout_width="135dp"
         android:layout_height="48dp"
+        android:backgroundTint="#E91E63"
         android:onClick="calcularArea"
         android:text="AREA"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -39,6 +42,7 @@
         android:id="@+id/btnPerimetroTrapecio"
         android:layout_width="137dp"
         android:layout_height="52dp"
+        android:backgroundTint="#E91E63"
         android:onClick="calcularPerimetro"
         android:text="PERÍMETRO"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -253,6 +257,7 @@
         android:id="@+id/btnVolver"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="#E91E63"
         android:onClick="volver"
         android:text="Volver"
         app:backgroundTint="#3DDB83"
