--- a/app/src/main/res/layout/activity_fibonacci.xml
+++ b/app/src/main/res/layout/activity_fibonacci.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/spiderman"
     tools:context=".FibonacciActivity">
 
     <EditText
@@ -15,16 +14,16 @@
         android:layout_marginBottom="524dp"
         android:ems="10"
         android:inputType="numberSigned"
-        android:text="..."
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="404dp"
-        android:layout_height="63dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="456dp"
+        android:layout_width="140dp"
+        android:layout_height="58dp"
+        android:layout_marginEnd="208dp"
+        android:layout_marginBottom="444dp"
+        android:backgroundTint="#E91E63"
         android:text="CALCULAR"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -52,13 +51,13 @@
 
     <TextView
         android:id="@+id/textTit"
-        android:layout_width="254dp"
-        android:layout_height="66dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="636dp"
+        android:layout_width="269dp"
+        android:layout_height="113dp"
+        android:layout_marginEnd="68dp"
+        android:layout_marginBottom="676dp"
         android:text="FIBONACCI"
-        android:textColor="@color/design_default_color_error"
-        android:textSize="24sp"
+        android:textColor="#E91E63"
+        android:textSize="48sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -67,8 +66,9 @@
         android:id="@+id/btbFibo"
         android:layout_width="120dp"
         android:layout_height="59dp"
-        android:layout_marginEnd="280dp"
-        android:layout_marginBottom="640dp"
+        android:layout_marginEnd="84dp"
+        android:layout_marginBottom="444dp"
+        android:backgroundTint="#E91E63"
         android:onClick="regresarfib"
         android:text="REGRESAR"
         app:layout_constraintBottom_toBottomOf="parent"
