--- a/app/src/main/res/layout/activity_tinomio_cuadrado_perfecto.xml
+++ b/app/src/main/res/layout/activity_tinomio_cuadrado_perfecto.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#A3F9FB"
+    android:background="#FFFFFF"
     tools:context=".TinomioCuadradoPerfecto">
 
     <TextView
@@ -56,7 +56,7 @@
         android:text="Calcular"
         android:textAllCaps="true"
         android:textStyle="bold"
-        app:backgroundTint="#0E4CAA"
+        app:backgroundTint="#E91E63"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -70,7 +70,7 @@
         android:text="REGRESAR"
         android:textAllCaps="true"
         android:textStyle="bold"
-        app:backgroundTint="#0E4CAA"
+        app:backgroundTint="#E91E63"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -80,10 +80,12 @@
         android:layout_height="33dp"
         android:layout_marginStart="92dp"
         android:layout_marginTop="40dp"
-        android:fontFamily="serif-monospace"
+        android:fontFamily="sans-serif"
         android:text="CUADRADO PERFECTO"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="#E91E63"
         android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
