--- a/app/src/main/res/layout/activity_triangulo.xml
+++ b/app/src/main/res/layout/activity_triangulo.xml
@@ -4,14 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".TriangulosActivity">
 
     <EditText
         android:id="@+id/txtBase"
         android:layout_width="102dp"
         android:layout_height="60dp"
-        android:layout_marginStart="112dp"
-        android:layout_marginTop="188dp"
+        android:layout_marginStart="176dp"
+        android:layout_marginTop="240dp"
         android:ems="10"
         android:inputType="text"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,12 +20,14 @@
 
     <TextView
         android:id="@+id/lblTitulo"
-        android:layout_width="246dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_width="177dp"
+        android:layout_height="99dp"
+        android:layout_marginStart="108dp"
+        android:layout_marginTop="48dp"
         android:text="Area de los Triangulos"
-        android:textSize="24sp"
+        android:textColor="#E91E63"
+        android:textSize="34sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -32,8 +35,8 @@
         android:id="@+id/txtAltura"
         android:layout_width="103dp"
         android:layout_height="61dp"
-        android:layout_marginStart="112dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginStart="176dp"
+        android:layout_marginTop="164dp"
         android:ems="10"
         android:inputType="text"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,33 +46,35 @@
         android:id="@+id/lblAltura"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="56dp"
         android:layout_marginTop="132dp"
         android:text="Altura"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@+id/txtAltura"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.909" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/lblBase"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="56dp"
         android:layout_marginTop="184dp"
         android:text="Base"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@+id/txtBase"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.892" />
 
     <Button
         android:id="@+id/btnEquilatero"
         android:layout_width="127dp"
         android:layout_height="66dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="316dp"
+        android:layout_marginTop="424dp"
+        android:backgroundTint="#E91E63"
         android:onClick="CalcularEquilatero"
         android:text="Equilatero"
         app:layout_constraintStart_toStartOf="parent"
@@ -79,8 +84,9 @@
         android:id="@+id/btnEscaleno"
         android:layout_width="134dp"
         android:layout_height="62dp"
-        android:layout_marginStart="280dp"
-        android:layout_marginTop="316dp"
+        android:layout_marginStart="272dp"
+        android:layout_marginTop="428dp"
+        android:backgroundTint="#E91E63"
         android:onClick="CalcularEscaleno"
         android:text="Escaleno"
         app:layout_constraintStart_toStartOf="parent"
@@ -88,20 +94,21 @@
 
     <TextView
         android:id="@+id/lblResultado"
-        android:layout_width="250dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="64dp"
+        android:layout_width="249dp"
+        android:layout_height="62dp"
+        android:layout_marginStart="80dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.597" />
+        app:layout_constraintVertical_bias="0.448" />
 
     <Button
         android:id="@+id/btnIsoceles"
-        android:layout_width="136dp"
-        android:layout_height="62dp"
-        android:layout_marginStart="140dp"
-        android:layout_marginTop="316dp"
+        android:layout_width="133dp"
+        android:layout_height="61dp"
+        android:layout_marginStart="136dp"
+        android:layout_marginTop="424dp"
+        android:backgroundTint="#E91E63"
         android:onClick="CalcularIsoceles"
         android:text="Isoceles"
         app:layout_constraintStart_toStartOf="parent"
@@ -109,10 +116,11 @@
 
     <Button
         android:id="@+id/btnRegresar"
-        android:layout_width="120dp"
-        android:layout_height="39dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="12dp"
+        android:layout_width="134dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="556dp"
+        android:layout_marginEnd="148dp"
+        android:backgroundTint="#E91E63"
         android:text="Regresar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
